--- a/CAN_interface/driver/Makefile
+++ b/CAN_interface/driver/Makefile
@@ -4,7 +4,7 @@
 obj-m += rpi_can.o
 canbus-objs := can_main.o can_fifo.o can_gpio.o can_parse.o can_sja1000.o can_filter.o
 
-ccflags-y := -I$(src)
+ccflags-y := -I$(src) #-DREV1
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
