Support for Peak System CAN interfaces

--- a/drvAsynCan/drvAsynCanApp/src/Makefile
+++ b/drvAsynCan/drvAsynCanApp/src/Makefile
@@ -4,40 +4,33 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 #=============================
-
 DBD += drvAsynCan.dbd
 
-drvAsynCan_DBD += base.dbd
-drvAsynCan_DBD += asyn.dbd
-drvAsynCan_DBD += drvAsynCan.dbd
+LIBRARY_IOC += drvAsynCan
 ifeq ($(T_A), linux-arm)
-drvAsynCan_DBD += drvAsynRPiCan.dbd
-endif 
-
-LIBRARY_IOC += drvAsynCanSupport
-
-ifeq ($(T_A), linux-arm)
-drvAsynCanSupport_SRCS += drvAsynRPiCan.cpp
-endif 
-drvAsynCanSupport_SRCS += drvAsynIsegHv.cpp
-drvAsynCanSupport_SRCS += drvAsynIsegHvGlobal.cpp
-drvAsynCanSupport_SRCS += drvAsynWienerVME.cpp
-drvAsynCanSupport_SRCS += drvAsynTHMP.cpp
-drvAsynCanSupport_SRCS += drvAsynLedPulser.cpp
-drvAsynCanSupport_SRCS += drvAsynTmcm142.cpp
-drvAsynCanSupport_SRCS += registerIOCfunctions.cpp
-drvAsynCanSupport_LIBS += asyn
-drvAsynCanSupport_LIBS += $(EPICS_BASE_IOC_LIBS)
+  drvAsynCan_SRCS += drvAsynRPiCan.cpp
+else
+  drvAsynCan_SRCS += drvAsynPeakCan.cpp
+endif
+drvAsynCan_SRCS += drvAsynIsegHv.cpp
+drvAsynCan_SRCS += drvAsynIsegHvGlobal.cpp
+drvAsynCan_SRCS += drvAsynWienerVME.cpp
+drvAsynCan_SRCS += drvAsynTHMP.cpp
+drvAsynCan_SRCS += drvAsynLedPulser.cpp
+drvAsynCan_SRCS += drvAsynTmcm142.cpp
+drvAsynCan_SRCS += registerIOCfunctions.cpp
+drvAsynCan_LIBS += asyn
+drvAsynCan_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 #=============================
 
-PROD_IOC += drvAsynCan
+#PROD_IOC += drvAsynCanTest
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
-drvAsynCan_SRCS_DEFAULT += drvAsynCan_registerRecordDeviceDriver.cpp AsynRPiCanMain.cpp
+#drvAsynCanTest_SRCS_DEFAULT += drvAsynCan_registerRecordDeviceDriver.cpp AsynRPiCanMain.cpp
 
-drvAsynCan_LIBS += drvAsynCanSupport asyn
-drvAsynCan_LIBS += $(EPICS_BASE_IOC_LIBS)
+#drvAsynCanTest_LIBS += drvAsynCan asyn
+#drvAsynCanTest_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 #===========================
 
