drvAsynCapacictec added to registerIOCfunctions.cpp

--- a/drvAsynCan/drvAsynCanApp/src/Makefile
+++ b/drvAsynCan/drvAsynCanApp/src/Makefile
@@ -13,6 +13,7 @@ else
   drvAsynCan_SRCS += drvAsynPeakCan.cpp
 endif
 drvAsynCan_SRCS += can_frame.cpp
+drvAsynCan_SRCS += drvAsynCapacitec.cpp
 drvAsynCan_SRCS += drvAsynIsegHv.cpp
 drvAsynCan_SRCS += drvAsynIsegHvGlobal.cpp
 drvAsynCan_SRCS += drvAsynWienerVME.cpp
