--- a/dallas1wire/configure/CONFIG
+++ b/dallas1wire/configure/CONFIG
@@ -17,7 +17,8 @@ CONFIG = $(RULES)/configure
 include $(CONFIG)/CONFIG
 
 # Override the Base definition:
-INSTALL_LOCATION = $(TOP)
+#INSTALL_LOCATION = $(TOP)
+INSTALL_LOCATION = /opt/epics/modules/dallas1wire
 
 # CONFIG_SITE files contain other build configuration settings
 include $(TOP)/configure/CONFIG_SITE
