Added new options to drvAsynCan
Added auto-restart option to drvAsynCan
Fixed some typos in drvAsynXXX classes

--- a/drvAsynCan/drvAsynCanApp/Db/Makefile
+++ b/drvAsynCan/drvAsynCanApp/Db/Makefile
@@ -8,8 +8,9 @@ include $(TOP)/configure/CONFIG
 
 # Create and install (or just install)
 # databases, templates, substitutions like this
-DB += ISEG_EHS_channel.db
-DB += ISEG_EHS_module.db
+DB += CapacitecDigitizer.db
+DB += IsegEhsEds_channel.db
+DB += IsegEhsEds_module.db
 DB += LEDPulser.db
 DB += THMP_COM.db
 DB += THMP_other.db
