--- a/drvAsynCan/drvAsynCanApp/src/Makefile
+++ b/drvAsynCan/drvAsynCanApp/src/Makefile
@@ -14,7 +14,10 @@ drvAsynCan_SRCS += can_frame.cpp
 drvAsynCan_SRCS += drvAsynCapacitec.cpp
 drvAsynCan_SRCS += drvAsynIsegEhsEds.cpp
 drvAsynCan_SRCS += drvAsynIsegHvGlobal.cpp
+drvAsynCan_SRCS += drvAsynIsegEch44a.cpp
+ifeq ($(USE_WIENERVME),yes)
 drvAsynCan_SRCS += drvAsynWienerVME.cpp
+endif
 drvAsynCan_SRCS += drvAsynTHMP.cpp
 drvAsynCan_SRCS += drvAsynLedPulser.cpp
 drvAsynCan_SRCS += drvAsynLedPulser2.cpp
@@ -25,12 +28,15 @@ drvAsynCan_SRCS += registerIOCfunctions.cpp
 drvAsynCan_LIBS += asyn
 drvAsynCan_LIBS += $(EPICS_BASE_IOC_LIBS)
 
-ifneq ($(words $(LIBSOCKETCAN_LIB) $(LIBSOCKETCAN_INCLUDE)),0)
-drvAsynCan_CXXFLAGS += -DUSELIBSOCKETCAN
-drvAsynCan_INCLUDES += -I$(LIBSOCKETCAN_INCLUDE)
-drvAsynCan_SYS_LIBS += socketcan
-SHRLIB_DEPLIB_DIRS  += $(LIBSOCKETCAN_LIB)
+ifdef $(USE_WIENERVME)
+	@echo "Building Wiener VME driver"
 endif
+#ifneq ($(words $(LIBSOCKETCAN_LIB) $(LIBSOCKETCAN_INCLUDE)),0)
+#drvAsynCan_CXXFLAGS += -DUSELIBSOCKETCAN
+#drvAsynCan_INCLUDES += -I$(LIBSOCKETCAN_INCLUDE)
+#drvAsynCan_SYS_LIBS += socketcan
+#SHRLIB_DEPLIB_DIRS  += $(LIBSOCKETCAN_LIB)
+#endif
 
 #=============================
 
