Fixed bug in socketCan driver; added new functionality to drvAsynIsegEhsEds

--- a/drvAsynCan/drvAsynCanApp/Db/Makefile
+++ b/drvAsynCan/drvAsynCanApp/Db/Makefile
@@ -9,6 +9,7 @@ include $(TOP)/configure/CONFIG
 # Create and install (or just install)
 # databases, templates, substitutions like this
 DB += CapacitecDigitizer.db
+DB += IsegEch44a.db
 DB += IsegEhsEds_channel.db
 DB += IsegEhsEds_module.db
 DB += LEDPulser.db
